<resources>
    <string name="app_name">Safety One</string>
    <string name="header_slogan">Help US Help YOU</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">No Account?</string>
    <string name="sign_up">Register</string>
    <string name="remember">Keep Me Signed In</string>
    <string name="reg_one">Part 1/2: General</string>
    <string name="select_card">Select Card Type</string>
    <string name="card_number">XXXX-XXXX-XXXX-XXXX</string>
    <string name="year">Y</string>
    <string name="month">M</string>
    <string name="date">D</string>
    <string name="slash">/</string>
    <string name="good_through">Good Thru</string>
    <string name="card_code">CVV</string>
    <string name="address_line_one">Street Address Line 1</string>
    <string name="address_line_two">Street Address Line 2 (apt, building, ...)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">ZIP</string>
    <string name="income_text">Annual Income</string>
    <string name="income">123456</string>
    <string name="dollar">$</string>
    <string name="next">Next</string>
  //other for transactions
    <string name="transaction_name">Transaction name</string>
    <string name="amount">Amount:</string>
    <string name="vendor">Vendor:</string>
    <string name="purchase_time">Purchase Time:</string>
    <string name="amount_val">34.57</string>
    <string name="vendor_val">H and M</string>
    <string name="purchase_time_val">10 pm</string>
    <string name="vendorName">Chik-Fil-A</string>
    <string name="finish">Finish</string>
</resources>
